<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>terrain_toolkit_ros2</name>
  <version>0.1.0</version>
  <description>
    ROS 2 Kilted interface node that bridges a LiDAR PointCloud2 stream
    to a ROS-less elevation-mapping Python library and republishes the
    resulting grid as a PointCloud2 with per-layer fields.
  </description>

  <maintainer email="herolada@fel.cvut.cz">Adam Herold</maintainer>
  <license>Apache-2.0</license>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>

  <!-- test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
